--- a/style.css
+++ b/style.css
@@ -157,6 +157,20 @@ a{
         font-size: 1.5em;
     }
 }
+.text-header>svg{
+    animation-name: bouncyAnimation;
+    animation-duration: 2000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+@keyframes bouncyAnimation{
+    10%,30%,50%{
+        transform: translateY(10px);
+    }
+    20%,40%,60%{
+        transform: translateY(0px);
+    }
+}
 .main-section{
     display: flex;
 }
